--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
-    "react-scripts": "2.1.3"
+    "react-scripts": "2.1.3",
+    "react-vega": "^4.0.2",
+    "vega-lib": "^4.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
